<resources>
    <string name="app_name">I-Vaga</string>
    <string name="titulo_cadastro">Cadastro de Dados do Login</string>
    <string name="titulo_cadastro_garagem">Cadastro de Dados Garagem</string>
    <string name="titulo_edit_garage">Editar Dados Garagem</string>
    <string name="titulo_cadastro_carro">Cadastro de Dados Carro</string>
    <string name="recuperar_senha">Recuperação de Senha</string>
    <string name="titulo_edit_user">Editar Dados Usuário</string>
    <string name="titulo_edit_car">Editar Dados Carro</string>
    <string name="delete">Confirmar Exclusão de Dados?</string>

    <string name="hint_email">E-Mail:</string>
    <string name="hint_senha">Senha:</string>
    <string name="hint_confirmar_senha">Confirmar senha:</string>
    <string name="hint_nome">Nome:</string>
    <string name="hint_sobrenome">Sobrenome:</string>
    <string name="hint_valor">Valor de uma diaria:</string>
    <string name="hint_placa">Placa do carro:</string>
    <string name="hint_rua">Rua:</string>
    <string name="hint_numero">Número:</string>
    <string name="hint_complemento">Complemento:</string>
    <string name="hint_bairro">Bairro:</string>
    <string name="hint_cidade">Cidade:</string>
    <string name="diaria">Valor da diaria:</string>
    <string name="dinheiro">$</string>
    <string name="recuperar">Recuperar</string>
    <string name="cancelar">Cancelar</string>

    <string name="button_login">Login</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="button_cadastrar_gps">Cadastrar Localização</string>
    <string name="button_voltar">Excluir</string>
    <string name="button_sair_upload">Cancelar</string>
    <string name="button_edit">Editar</string>
    <string name="text_button_cadastro">Não possui conta? Cadastre-se!</string>
    <string name="text_button_recuperar_senha">Esqueci a minha senha</string>
    <string name="radio_button">Selecione uma opção para continuar o cadastro:</string>
    <string name="text_garagem">Garagem</string>
    <string name="text_carro">Carro</string>
    <string name="text_button_login">Já possuo cadastro! Login</string>
    <string name="text_lista_garagem">Suas Garagens</string>
    <string name="text_cadastro_carro">Seus Carros</string>
    <string name="text_lista_carro">Dados do carro cadastrado</string>
    <string name="usuario">Usuario logado</string>
    <string name="garagem_on">Garagem aberta</string>
    <string name="garagem_off">Garagem fechada</string>
    <string name="informar_email">Informe o seu e-mail</string>
    <string name="preencher_campo_email">Preencha o campo de e-mail!"</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="on">Garagem aberta</string>
    <string name="off">Garagem fechada</string>

    <string name="content_description_email">Campo para digitar e-mail de login</string>
    <string name="content_description_senha">Campo para digitar senha de login</string>
    <string name="content_description_button_login">Botão para se logar na conta de usuário</string>
    <string name="content_description_text_button_cadastro">Botão para acessar a tela de cadastro dos dados de login</string>
    <string name="content_description_text_button_recuperar_senha">Botão para recuperar a senha de login</string>
    <string name="content_description_titulo_cadastro">Tela de cadastro de dados de login</string>
    <string name="content_description_confirmar_senha_cadastro">Campo para digitar senha de confirmação</string>
    <string name="content_description_button_cadastro">Botão para cadastrar os dados de login e prosseguir com o cadastro</string>
    <string name="content_description_button_edit_car">Botão para editar os dados do carro</string>
    <string name="content_description_button_sair_edit_car">Botão para sair da edição dos dados do carro</string>
    <string name="content_description_text_button_login">Botão para acessar a tela de login de usuário</string>
    <string name="content_description_titulo_cadastro_garagem">Tela de cadastro de dados da garagem</string>
    <string name="content_description_titulo_cadastro_carro">Tela de cadastro de dados do carro</string>
    <string name="content_description_titulo_edit_usuario">Tela de edição de dados do usuário</string>
    <string name="content_description_titulo_edit_carro">Tela de edição de dados do carro</string>
    <string name="content_description_titulo_edit_garagem">Tela de edição de dados da garagem</string>
    <string name="content_description_nome">Campo para digitar o nome do usuário</string>
    <string name="content_description_sobrenome">Campo para digitar o sobrenome do usuário</string>
    <string name="content_description_valor">Campo para digitar o valor de uma diaria da garagem</string>
    <string name="content_description_placa">Campo para digitar a placa do carro</string>
    <string name="content_description_button_cadastro_garagem">Botão para cadastrar dados da garagem</string>
    <string name="content_description_button_sair_cadastro_garagem">Botão para excluir dados da garagem</string>
    <string name="content_description_rua">Campo para digitar a rua da garagem</string>
    <string name="content_description_numero">Campo para digitar o número da garagem</string>
    <string name="content_description_complemento">Campo para digitar o complemento do endereço da garagem</string>
    <string name="content_description_bairro">Campo para digitar o bairro da garagem</string>
    <string name="content_description_cidade">Campo para digitar a cidade da garagem</string>
    <string name="content_description_foto">Campo para a foto do perfil do usuario</string>
    <string name="content_description_email_user">Campo com o e-mail do usuário</string>
    <string name="content_description_sobrenome_user">Campo com o sobrenome do usuário</string>
    <string name="content_description_car_user">Campo com os dados do carro do usuário</string>
    <string name="content_description_button_upload">Botão para gravar a foto</string>
    <string name="content_description_button_cadastro_carro">Botão para cadastrar dados do carro</string>
    <string name="content_description_button_sair_cadastro_carro">Botão para excluir dados do carro</string>
    <string name="content_description_button_edit_user">Botão para editar dados do usuário</string>
    <string name="content_description_button_sair_edit_user">Botão para sair da pagina de edição de dados do usuário</string>
    <string name="content_description_button_sim">Botão para confirmar exclusão de dados</string>
    <string name="content_description_button_nao">Botão para não confirmar exclusão de dados</string>
    <string name="content_description_campo_pesquisa">Campo para pesquesar as garagens por cidade</string>
    <string name="content_description_button_pesquisa">Botão para pesquisar as garagens</string>

    <string name="ja_logado">Usuário logado</string>
    <string name="email_vazio">Campo do e-mail vazio</string>
    <string name="senha_vazio">Campo da senha vazio</string>
    <string name="confirmacao_vazio">Campo de confirmação da senha vazio</string>
    <string name="nome_vazio">Campo do nome vazio</string>
    <string name="sobrenome_vazio">Campo do sobrenome vazio</string>
    <string name="rua_vazio">Campo da rua vazio</string>
    <string name="numero_vazio">Campo do número vazio</string>
    <string name="bairro_vazio">Campo do bairro vazio</string>
    <string name="cidade_vazio">Campo da cidade vazio</string>
    <string name="valor_vazio">Campo do valor da diária vazio</string>
    <string name="placa_vazio">Campo da placa vazio</string>
    <string name="email_senha_vazio">Campos do e-mail e da senha vazios</string>
    <string name="email_senha_valido">Login efetuado com sucesso!</string>
    <string name="email_senha_invalido">E-mail e senha invalidos! Tente novamente!</string>
    <string name="senha_invalido">Senha invalidos! Tente novamente!</string>
    <string name="senha_nao_confirmada">As senhas não se correspondem!</string>
    <string name="senha_forte">Senha fraca, digite no minimo 6 caracteres</string>
    <string name="email_invalido">E-mail digitado invalido! Digite um e-mail valido</string>
    <string name="email_nao_valido">E-mail inválido</string>
    <string name="email_nao_cadastrado">E-mail não está¡ cadastrado</string>
    <string name="email_cadastrado">E-mail já¡ cadastrado!</string>
    <string name="erro_cadastro">Sem conexão com o Banco de Dados!!!</string>
    <string name="erro_internet">Sem conexão com a Internet!!!</string>
    <string name="erro">Erro: </string>
    <string name="erro_dados">Erro ao gravar os dados no Banco de Dados</string>
    <string name="dados_login">Dados de login cadastrado com sucesso</string>
    <string name="dados_garagem">Dados da garagem cadastrado com sucesso</string>
    <string name="dados_carro">Dados do carro cadastrado com sucesso</string>
    <string name="carro_nao_cadastrado">O carro não possui cadastro</string>
    <string name="foto_nao_cadastrada">A foto não foi cadastrada</string>
    <string name="foto_cadastrada">Foto cadastrada com sucesso</string>
    <string name="click_foto">Click na foto para edita-la!</string>
    <string name="erro_imagem">Não foi selecionada nenhuma imagem</string>
    <string name="receber_mensagem">Em instantes vôce recebera um e-mail!</string>
    <string name="exemplo_email">exemplo@exemplo.com</string>
    <string name="edit_dados">Dados alterados com sucesso</string>
    <string name="not_edit_dados">Dados não alterados</string>
    <string name="delet_dados">Dados deletados com sucesso</string>
    <string name="selecione_imagem">Selecione uma imagem</string>
    <string name="num_excedido">Número de cadastros excedido!</string>
    <string name="aguarde">Aguarde...</string>
    <string name="pesquisar_por">Pesquisar por Cidade</string>
</resources>