<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    tools:context=".activity.RegisterLoginActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center"
            android:text="@string/titulo_cadastro"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/titulo_size"
            android:textStyle="bold"
            android:contentDescription="@string/content_description_titulo_cadastro"/>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            android:layout_marginTop="@dimen/fab_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailRegister"
                style="@style/edit_text_cadastro"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress|textWebEmailAddress|textAutoComplete"
                android:contentDescription="@string/content_description_email"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/layout_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/senhaRegister"
                style="@style/edit_text_cadastro"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:hint="@string/hint_senha"
                android:inputType="textPassword"
                android:contentDescription="@string/content_description_senha"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/layout_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/senhaConfirmarRegister"
                android:layout_marginBottom="@dimen/layout_margin"
                style="@style/edit_text_cadastro"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:hint="@string/hint_confirmar_senha"
                android:inputType="textPassword"
                android:contentDescription="@string/content_description_confirmar_senha_cadastro"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nomeRegister"
                style="@style/edit_text_cadastro"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/hint_nome"
                android:inputType="textCapSentences|textCapWords|textAutoComplete"
                android:contentDescription="@string/content_description_nome"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/sobrenomeRegister"
                style="@style/edit_text_cadastro"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/hint_sobrenome"
                android:inputType="textCapSentences|textCapWords|textAutoComplete"
                android:contentDescription="@string/content_description_sobrenome"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center"
            android:text="@string/radio_button"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorPrimary"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gravity"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbgaragem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_size"
                android:text="@string/text_garagem"
                android:gravity="start" />
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbcarro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_size"
                android:text="@string/text_carro"
                android:layout_gravity="start" />
        </RadioGroup>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">
            <android.support.v7.widget.CardView
                android:id="@+id/btnRegisterLogin"
                android:layout_width="@dimen/imagem_button"
                android:layout_height="@dimen/card_height"
                app:cardBackgroundColor="@color/colorButton"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/dois"
                app:cardElevation="@dimen/layout_margin"
                app:cardUseCompatPadding="true"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:contentDescription="@string/content_description_button_cadastro">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/expanded_start"
                        android:layout_height="@dimen/expanded_start"
                        android:src="@drawable/ic_send_black_24dp"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.CardView>
            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/progress_bar_register_login"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/layout_height"
                android:layout_height="@dimen/layout_height"
                android:layout_gravity="center" />
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btnLogoutLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:gravity="center"
            android:text="@string/text_button_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:contentDescription="@string/content_description_text_button_login"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>