<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    tools:context=".activity.RegisterLoginActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center"
            android:text="@string/titulo_edit_user"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/titulo_size"
            android:textStyle="bold"
            android:contentDescription="@string/content_description_titulo_edit_usuario"/>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            android:layout_marginTop="@dimen/fab_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nomeEdit"
                style="@style/edit_text_cadastro"
                android:hint="@string/hint_nome"
                android:inputType="textCapSentences|textCapWords"
                android:contentDescription="@string/content_description_nome"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/sobrenomeEdit"
                style="@style/edit_text_cadastro"
                android:hint="@string/hint_sobrenome"
                android:inputType="textCapSentences|textCapWords"
                android:contentDescription="@string/content_description_sobrenome"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/layout_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/senhaEdit"
                style="@style/edit_text_cadastro"
                android:hint="@string/hint_senha"
                android:inputType="textPassword"
                android:contentDescription="@string/content_description_senha"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/layout_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/senhaConfirmarEdit"
                android:layout_marginBottom="@dimen/layout_margin"
                style="@style/edit_text_cadastro"
                android:hint="@string/hint_confirmar_senha"
                android:inputType="textPassword"
                android:contentDescription="@string/content_description_confirmar_senha_cadastro"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/layout_margin_top">
            <android.support.v7.widget.CardView
                android:id="@+id/buttonEditUser"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/dois"
                app:cardElevation="@dimen/layout_margin"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorButton"
                android:clickable="true"
                android:focusable="true">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:contentDescription="@string/content_description_button_edit_user">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_edit"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.CardView>
            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/progress_bar_edit"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/layout_height"
                android:layout_height="@dimen/layout_height"
                android:layout_gravity="center" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>