<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    tools:context=".activity.RegisterGaragActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:contentDescription="@string/content_description_titulo_cadastro_garagem"
            android:gravity="center"
            android:text="@string/titulo_cadastro_garagem"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/titulo_size"
            android:textStyle="bold" />
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/content_description_rua">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/ruaRegisterGarage"
                style="@style/edit_text_cadastro"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:hint="@string/hint_rua"
                android:inputType="textCapSentences|textCapWords"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin">
            <android.support.design.widget.TextInputLayout
                style="@style/edit_text_input_layout"
                android:layout_weight="2"
                android:layout_marginEnd="@dimen/um"
                android:contentDescription="@string/content_description_numero">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/numeroRegisterGarage"
                    style="@style/edit_text_cadastro"
                    android:drawableStart="@drawable/ic_home_black_24dp"
                    android:hint="@string/hint_numero"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/edit_text_input_layout"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/um"
                android:contentDescription="@string/content_description_complemento">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/complementoRegisterGarage"
                    style="@style/edit_text_cadastro"
                    android:drawableStart="@drawable/ic_home_black_24dp"
                    android:hint="@string/hint_complemento"
                    android:inputType="textCapSentences|textCapWords"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin">
            <android.support.design.widget.TextInputLayout
                style="@style/edit_text_input_layout"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/um"
                android:contentDescription="@string/content_description_bairro">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bairroRegisterGarage"
                    style="@style/edit_text_cadastro"
                    android:drawableStart="@drawable/ic_home_black_24dp"
                    android:hint="@string/hint_bairro"
                    android:inputType="textCapSentences|textCapWords"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/edit_text_input_layout"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/um"
                android:contentDescription="@string/content_description_cidade">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cidadeRegisterGarage"
                    style="@style/edit_text_cadastro"
                    android:drawableStart="@drawable/ic_home_black_24dp"
                    android:hint="@string/hint_cidade"
                    android:inputType="textCapSentences|textCapWords"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.design.widget.TextInputLayout
            style="@style/edit_text_input_layout"
            android:layout_marginTop="@dimen/margin"
            android:contentDescription="@string/content_description_cidade">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/valoRegisterGarage"
                style="@style/edit_text_cadastro"
                android:drawableStart="@drawable/ic_attach_money_black_24dp"
                android:hint="@string/hint_valor"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dois">
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_on_offRegisterGarage"
                android:layout_width="@dimen/expanded_start"
                android:layout_height="@dimen/expanded_start"
                android:layout_marginStart="@dimen/margin"
                android:textOff="@string/f"
                android:textOn="@string/n"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/on_offRegisterGarage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="@dimen/text_size_list"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">
            <android.support.v7.widget.CardView
                android:id="@+id/btnRegisterGaragem"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorButton"
                app:cardCornerRadius="@dimen/dois"
                app:cardElevation="@dimen/layout_margin"
                app:cardUseCompatPadding="true">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_button_cadastro_garagem"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/button_cadastrar"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:enabled="false"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.CardView>
            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/progres_bar_register_garagem"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/layout_height"
                android:layout_height="@dimen/layout_height"
                android:layout_gravity="center" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>